fix content title not aligned when used as button

--- a/components/ContentTitle/ContentTitle.module.scss
+++ b/components/ContentTitle/ContentTitle.module.scss
@@ -2,12 +2,14 @@
   width: 298px;
   height: 57px;
   display: flex;
+  gap: 1px;
   flex-direction: column;
   align-content: space-between;
   padding: 0px;
 }
 
 .heading {
+  text-align: start;
   margin: 0;
   margin-block-end: 0;
   margin-block-start: 0;
@@ -16,13 +18,10 @@
 
   &.h4 {
     width: 298px;
-    height: 24px;
+    height: 40px;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 34px;
     color: #beced0;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
   }
 
   &.h2 {
@@ -31,10 +30,6 @@
     font-weight: 700;
     font-size: 34px;
     color: #202020;
-    gap: 1px;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
   }
 }
 
@@ -50,8 +45,7 @@
   }
 
   &.off {
-    margin-top: 15px;
-    width: 3px;
+    width: 6px;
     height: 16px;
   }
 }
